--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -78,7 +78,8 @@ jobs:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   MARKER="<!-- Analyze workflow report -->"
-                  COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
+                  COMMENT_BODY="${MARKER}
+                  $(cat ./results/analysis_report.md)"
                   EXISTING_COMMENT_ID=$(gh api "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" --jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
                   if [ -n "$EXISTING_COMMENT_ID" ]; then
                     echo "Updating existing comment with ID: $EXISTING_COMMENT_ID"
